--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -70,7 +70,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@main
 
     - name: Initialization environment
       env:
@@ -118,6 +118,7 @@ jobs:
         KERNEL_VERSION_NAME: ${{ github.event.inputs.kernel_version }}
         KERNEL_AUTO_LATEST: true
         GZIP_IMGS: .gz
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
     
     - name: Upload artifact to Actions
       uses: kittaakos/upload-artifact-as-is@master
