--- a/.github/workflows/Build_ARMv8.yml
+++ b/.github/workflows/Build_ARMv8.yml
@@ -302,7 +302,8 @@ jobs:
         KERNEL_REPO_URL: https://github.com/Jejz168/OpenWrt/tree/main/backup
         KERNEL_VERSION_NAME: 5.4.191_5.10.116_5.15.60_6.0.2
         KERNEL_AUTO_LATEST: true
-        GZIP_IMGS: .gz 
+        GZIP_IMGS: .gz
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
         
     - name: Upload artifact to Actions
       uses: kittaakos/upload-artifact-as-is@master
