--- a/.github/workflows/Build_X86_64(个人双开).yml
+++ b/.github/workflows/Build_X86_64(个人双开).yml
@@ -14,8 +14,8 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-  schedule:
-    - cron: 0 19 * * *
+  #schedule:
+    #- cron: 0 19 * * *
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
