--- a/.github/workflows/Build_X86_64(个人双开版).yml
+++ b/.github/workflows/Build_X86_64(个人双开版).yml
@@ -4,7 +4,7 @@
 # By：Jejz
 #===============================================
 
-name: Build_x86_64(个人双开)
+name: Build_x86_64(个人双开版)
 
 on:
   repository_dispatch:
@@ -237,14 +237,14 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」固件🔴（个人双开版）
         allowUpdates: true
-        tag: ${{ env.TAG }}_${{ env.KERNEL }}
+        tag: ${{ env.FILE_NAME }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
           - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 固件
           - 🔴 🔴 🔴 🔴 🔴 🔴
-          - 🔴（个人双开不用改ip）默认IP：192.168.8.5 默认密码：无密码
+          - 🔴（个人双开版方便不用改ip）默认IP：192.168.8.5 默认密码：无密码
           - 🔴 🔴 🔴 🔴 🔴 🔴
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           - ★ 感谢源码作者无私分享！
@@ -272,7 +272,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          🔴个人双开
+          🔴个人双开版
           ♨️${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.DATE1 }}
