--- a/.github/workflows/Build_X86_64(个人双开版).yml
+++ b/.github/workflows/Build_X86_64(个人双开版).yml
@@ -237,14 +237,16 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」固件🔴（个人双开版）
+        name: ${{ env.DATE }} 🔴「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」（个人双开版）
         allowUpdates: true
+        removeArtifacts: true
         tag: ${{ env.FILE_NAME }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
           - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 固件
           - 🔴 🔴 🔴 🔴 🔴 🔴
-          - 🔴（个人双开版方便不用改ip）默认IP：192.168.8.5 默认密码：无密码
+          - 🔴（个人双开版方便不用改ip）
+          - 🔴默认IP：192.168.8.5 默认密码：无密码
           - 🔴 🔴 🔴 🔴 🔴 🔴
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           - ★ 感谢源码作者无私分享！
