--- a/.github/workflows/Build_X86_64(个人双开版).yml
+++ b/.github/workflows/Build_X86_64(个人双开版).yml
@@ -333,4 +333,4 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.FILE_NAME }}
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}8_${{ env.KERNEL }}
