--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -6366,18 +6366,7 @@ CONFIG_PACKAGE_sshtunnel=y
 # CONFIG_PACKAGE_libreswan is not set
 CONFIG_PACKAGE_n2n=y
 # CONFIG_PACKAGE_n2n-utils is not set
-CONFIG_PACKAGE_ocserv=y
-
-#
-# Configuration
-#
-# CONFIG_OCSERV_PAM is not set
-# CONFIG_OCSERV_SECCOMP is not set
-# CONFIG_OCSERV_RADIUS is not set
-CONFIG_OCSERV_PROTOBUF=y
-CONFIG_OCSERV_HTTP_PARSER=y
-# end of Configuration
-
+# CONFIG_PACKAGE_ocserv is not set
 CONFIG_PACKAGE_openconnect=y
 
 #
