--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -32,12 +32,13 @@ jobs:
         pwd
         rm -rf ./backup/kernel
         mkdir -p ./backup/kernel
-        svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
+        #svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
+        svn export https://github.com/breakings/OpenWrt/trunk/opt/kernel ./backup/kernel --force
         rm -rf ./backup/kernel/5.10.*
         rm -rf ./backup/kernel/5.4.*
 
     - name: Download kernel
-      uses: robinraju/release-downloader@v1.3
+      uses: robinraju/release-downloader@main
       with:
         repository: "Jejz168/compile-kernel"
         latest: true
@@ -72,4 +73,4 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-           ҉ 🎡同步成功 ҉
+           ҉ 🎡Kernel同步成功 ҉
